Fix sidebar spacing

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
     background-color: rgb(228, 174, 58);
     grid-row: 1 / 3;
     display: grid;
-    grid-template-rows: 1fr 3fr 6fr;
+    grid-template-rows: 1fr 2fr 6fr;
     justify-items: start;
 }
 
@@ -210,7 +210,7 @@ body {
 }
 
 .announce-header, .announce-text, .trend-user, .trend-user-bio {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 
 .trend-container {
@@ -230,6 +230,6 @@ body {
 }
 
 .trend-icon {
-    width: 30px;
+    width: 40px;
     opacity: 0.7;
 }
